Update version to 0.0.2 in pubspec.yaml and config.yaml, update service worker version, and improve README instructions for building and copying web assets.

--- a/firebase_messaging_devtool/extension/devtools/config.yaml
+++ b/firebase_messaging_devtool/extension/devtools/config.yaml
@@ -1,4 +1,4 @@
 name: firebase_messaging_devtool
-version: 0.0.1
-issueTracker: # TODO: Add your issue tracker URL here
+version: 0.0.2
+issueTracker: https://github.com/FredrikBorgstrom/firebase_messaging_devtool/issues
 materialIconCodePoint: '0xe3e0' # A basic message icon, you can change this 
