--- a/firebase_messaging_devtool/pubspec.yaml
+++ b/firebase_messaging_devtool/pubspec.yaml
@@ -1,6 +1,6 @@
 name: firebase_messaging_devtool
 description: "A Flutter DevTools extension to display Firebase Messaging events from a debugged application."
-version: 0.0.2
+version: 0.1.0
 homepage: https://abcx3.com
 repository: https://github.com/FredrikBorgstrom/firebase_messaging_devtool
 topics: [flutter, firebase, messaging, devtools, extension]
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_messaging: ^15.2.4
 
 dev_dependencies:
   flutter_test:
