Enhance Firebase Messaging DevTool with new features and improvements. Added a task for building with sourcemaps in VSCode, improved device identification using the device_info_plus package, and updated message persistence with shared_preferences. Updated CHANGELOG and README to reflect these changes, including detailed installation and usage instructions. Fixed various bugs related to message handling and settings persistence.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,11 @@
          "command": "cd firebase_messaging_devtool_extension_web && dart run devtools_extensions build_and_copy --source=. --dest=../firebase_messaging_devtool/extension/devtools && cd .."
       },
       {
+         "label": "build with sourcemaps",
+         "type": "shell",
+         "command": "cd firebase_messaging_devtool_extension_web && flutter build web --csp &&  cd .."
+      },
+      {
          "label": "publish",
          "type": "shell",
          "command": "dart pub publish"
