--- a/firebase_messaging_devtool/pubspec.yaml
+++ b/firebase_messaging_devtool/pubspec.yaml
@@ -1,18 +1,19 @@
 name: firebase_messaging_devtool
-description: "A Flutter DevTools extension to display Firebase Messaging events from a debugged application."
+description: A Flutter DevTools extension that displays Firebase Cloud Messaging (FCM) events in real-time for debugging
 version: 0.2.0
 homepage: https://abcx3.com
-repository: https://github.com/FredrikBorgstrom/firebase_messaging_devtool
+repository: https://github.com/abcx3/firebase_messaging_devtool
 topics: [flutter, firebase, messaging, devtools, extension]
 
 environment:
-  sdk: ^3.7.2
-  flutter: ">=1.17.0"
+  sdk: ^3.0.0
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_messaging: ^15.2.4
+  firebase_messaging: ">=14.6.5 <16.0.0"
+  device_info_plus: ^11.3.3
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  # This section identifies this package as a Flutter package
+  # Note: if there are no specific flutter configurations needed, this can be empty
+  uses-material-design: true
 
   # To add assets to your package, add an assets section, like this:
   # assets:
@@ -55,3 +59,6 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/to/font-from-package
+
+# flutter pub global activate --source path .
+# flutter pub global activate firebase_messaging_devtool
