--- a/firebase_messaging_devtool_extension_web/pubspec.yaml
+++ b/firebase_messaging_devtool_extension_web/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  devtools_extensions: ^0.3.1
+  # Add the web package dependency
+  web: ^1.1.1 # Use latest appropriate version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  devtools_extensions: ^0.3.1
-  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
