Refactor main.dart to streamline app structure by moving core logic to src/app.dart. Update build commands in tasks.json for improved web build process. Update service worker and last build ID for consistency. Remove obsolete flutter_service_worker.js file. Update main.dart.js with new source map. Update widget test imports to reflect new structure.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,7 @@
       {
          "label": "build with sourcemaps",
          "type": "shell",
-         "command": "cd firebase_messaging_devtool_extension_web && flutter build web --csp &&  cd .."
+         "command": "cd firebase_messaging_devtool_extension_web && flutter build web --csp --source-maps --debug --optimization-level=0 --pwa-strategy=none && cp -r ./build/web/. ../firebase_messaging_devtool/extension/devtools/build && cd .."
       },
       {
          "label": "publish",
