Enhance Firebase Messaging DevTool by adding a new build task for Flutter web without PWA support, updating existing build commands for consistency, and implementing a service worker for improved caching. Remove obsolete files and ensure message handling logic is robust with deduplication and improved storage management. Update main.dart for better theme handling and message display functionality.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,9 +14,14 @@
          "command": "cd firebase_messaging_devtool_extension_web && dart run devtools_extensions build_and_copy --source=. --dest=../firebase_messaging_devtool/extension/devtools && cd .."
       },
       {
+         "label": "build with no PWA",
+         "type": "shell",
+         "command": "cd firebase_messaging_devtool_extension_web && flutter build web --csp -O0 --pwa-strategy=none && cp -r ./build/web/. ../firebase_messaging_devtool/extension/devtools/build && cd .."
+      },
+      {
          "label": "build with sourcemaps",
          "type": "shell",
-         "command": "cd firebase_messaging_devtool_extension_web && flutter build web --csp --source-maps --debug --optimization-level=0 --pwa-strategy=none && cp -r ./build/web/. ../firebase_messaging_devtool/extension/devtools/build && cd .."
+         "command": "cd firebase_messaging_devtool_extension_web && flutter build web --csp --source-maps --debug -O0 --pwa-strategy=none && cp -r ./build/web/. ../firebase_messaging_devtool/extension/devtools/build && cd .."
       },
       {
          "label": "publish",
